# kp-build

./: .gitignore  DESIGN-NOTES.md  LICENSE  README.md  SPEC.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: index.html  kp-build-explainer.html  kp-build-metrics.html  kp-build-orchestration.html  kp-build-overview.html
docs/plans/: 2026-07-06-manim.md  2026-07-06-sui-move.md
docs/specs/: 2026-07-06-manim-design.md  2026-07-06-sui-move-2024-design.md  2026-07-06-sui-move-design.md  2026-07-07-kp-deepen-design.md
eval/: falsify.py
examples/: README.md  agent-memory.base-answer.txt  agent-memory.kp-answer.txt  agent-memory.research.json  coding-agents.base-answer.txt  coding-agents.kp-answer.txt  coding-agents.research.json  discrete-diffusion-llms.base-answer.txt  discrete-diffusion-llms.kp-answer.txt  discrete-diffusion-llms.report.html  discrete-diffusion-llms.research.json  glp1-incretin-obesity.base-answer.txt  glp1-incretin-obesity.kp-answer.txt  glp1-incretin-obesity.report.html  glp1-incretin-obesity.research.json  hf-creative-direction.research.json  hf-kpmodel.research.json  http-semantics-grounding.research.json  manim.research.json  mesh-kpmodel.research.json  rubric-based-rl-nonverifiable.base-answer.txt  rubric-based-rl-nonverifiable.kp-answer.txt  rubric-based-rl-nonverifiable.report.html  rubric-based-rl-nonverifiable.research.json  sleep-insomnia-evidence.base-answer.txt  sleep-insomnia-evidence.kp-answer.txt  sleep-insomnia-evidence.report.html  sleep-insomnia-evidence.research.json  speculative-decoding-llms.base-answer.txt  speculative-decoding-llms.kp-answer.txt  speculative-decoding-llms.report.html  speculative-decoding-llms.research.json  sui-move.research.json  vwt-grounding.research.json
examples/agent-memory/: CONTEXT.md  (+4 more)
skill/: SKILL.md
skill-deepen/: SKILL.md
tests/: test_assemble.py  test_citations.py  test_deepen.py  test_examples_build.py  test_falsify.py  test_ground.py  test_judge_axis.py  test_kpm_conformance.py  test_manim_runner.py  test_p1.py  test_probe.py  test_refresh.py  test_report.py  test_review_fixes.py  test_schema.py  test_sui_runner.py  test_verifier_seam.py
(+3336 files in other folders)
