[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kp-build"
version = "0.1.0"
description = "Build portable, citation-verified, agent-loadable knowledge packages (wikillm) — a research-landscape foundation for starting a PhD-level paper."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.scripts]
kp-build = "kp_build.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
