[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kp-build"
version = "0.2.0"
description = "Build portable, verifier-gated, agent-loadable knowledge packages (wikillm) — four pluggable verifiers: live citation checks, execution gates, doc-grounding, and recorded blind-judge panels."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Treibs" }]
keywords = ["llm", "agents", "knowledge", "citations", "arxiv", "research", "rag", "kpm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.urls]
Repository = "https://github.com/Treibs/kp-build"
Issues = "https://github.com/Treibs/kp-build/issues"

[project.scripts]
kp-build = "kp_build.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
